--- a/src/app/pages/trading/trade-tabs/trade-tabs.component.html
+++ b/src/app/pages/trading/trade-tabs/trade-tabs.component.html
@@ -1,16 +1,70 @@
+<div>
+    <mat-accordion>
+        <mat-expansion-panel (opened)="panelOpenState.set(true)" (closed)="panelOpenState.set(false)">
+            <mat-expansion-panel-header>
+                <mat-panel-title> Search & Filters </mat-panel-title>
+                <!-- <mat-panel-description>
+                    Currently I am {{panelOpenState() ? 'open' : 'closed'}}
+                </mat-panel-description> -->
+            </mat-expansion-panel-header>
+            <!-- <mat-card class="mat-mdc-card mdc-card cardWithShadow">
+                <mat-card-content class="mat-mdc-card-content p-y-24"> -->
+            <form [formGroup]="searchForm" (ngSubmit)="onSubmit()">
+                <h3>Search Filters</h3>
+                <div class="row">
+                    <div class="col-md-3" *ngFor="let field of searchForm.controls | keyvalue">
+                        <mat-form-field appearance="outline" color="primary" class="w-100">
+                            <mat-label [for]="field.key">{{ field.key | titlecase }}</mat-label>
+                            <input matInput [id]="field.key" [formControlName]="field.key" type="text" />
+                        </mat-form-field>
+                    </div>
+                </div>
+                <h3>Column Filters</h3>
+                <div class="row">
+                    <div class="col-6"></div>
+                    <div class="col-6"></div>
+                </div>
+                <mat-radio-group formControlName="sortingOrder" aria-label="Select an option">
+                    <mat-radio-button value="1">Option 1</mat-radio-button>
+                    <mat-radio-button value="2">Option 2</mat-radio-button>
+                    <mat-radio-button value="3">Option 3</mat-radio-button>
+                </mat-radio-group>
+
+                <mat-form-field appearance="outline" class="p-10">
+                    <mat-label>Column Order</mat-label>
+                    <mat-select name="orderColumn" formControlName="sortingColumn">
+                        @for (col of orderDropdown; track col) {
+                        <mat-option [value]="col">{{col}}</mat-option>
+                        }
+                    </mat-select>
+                </mat-form-field>
+                <!-- </mat-card-content> -->
+                <div class="text-right p-24 p-t-0">
+                    <button mat-flat-button color="primary" class="m-r-8" type="submit">Save</button>
+                    <button mat-stroked-button color="warn" class="m-r-8" type="button">Cancel</button>
+                </div>
+                <!-- </mat-card> -->
+            </form>
+        </mat-expansion-panel>
+    </mat-accordion>
+</div>
+<br>
+<br>
+
 <mat-card class="mat-mdc-card mdc-card chat-app cardWithShadow p-14 w-100 h-100">
-    <mat-tab-group animationDuration="0ms" class="mat-mdc-tab-group mat-primary">
+    <mat-tab-group animationDuration="0ms" class="mat-mdc-tab-group mat-primary"
+        (selectedTabChange)="onTabChange($event)">
         <mat-tab label="Order Book">
-            <app-order-book></app-order-book>
+            <app-order-book [searchData]="tabWiseData.orderBook"></app-order-book>
         </mat-tab>
         <mat-tab label="Trade Book">
-            <app-trade-book></app-trade-book>
+            <app-trade-book [searchData]="tabWiseData.tradeBook"></app-trade-book>
         </mat-tab>
         <mat-tab label="Position">
-            <app-position></app-position>
+            <app-position [searchData]="tabWiseData.position"></app-position>
         </mat-tab>
         <mat-tab label="Holdings">
-            <app-holding></app-holding>
+            <app-holding [searchData]="tabWiseData.holdings"></app-holding>
         </mat-tab>
     </mat-tab-group>
 </mat-card>
