cleanup-subscription-revamp

--- a/src/app/pages/account/profile/profile.component.html
+++ b/src/app/pages/account/profile/profile.component.html
@@ -1,11 +1,32 @@
 <div>
-    <div class="bg-light-primary rounded p-y-30 p-x-24 m-b-30 overflow-hidden">
+     <!-- Top Section -->
+     <div class="bg-light-primary rounded p-y-30 p-x-24 m-b-30 overflow-hidden">
         <div class="row">
-            <div class="col-sm-8">
-                <h4 class="page-title m-0 f-s-20 f-w-600 m-b-16">Account Setting</h4>
+          <div class="col-sm-8">
+            <h4 class="page-title m-0 f-s-20 f-w-600 m-b-16">Account</h4>
+            <div class="d-flex align-items-center overflow-hidden">
+              <ul class="breadcrumb">
+                <li class="breadcrumb-item"><a>Dashboard</a></li>
+                <li class="breadcrumb-item">
+                  <i-tabler name="circle-filled" class="icon-8">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                      <path d="M7 3.34a10 10 0 1 1 -4.995 8.984l-.005 -.324l.005 -.324a10 10 0 0 1 4.995 -8.336z"
+                        stroke-width="0" fill="currentColor"></path>
+                    </svg>
+                  </i-tabler>
+                </li>
+                <li class="breadcrumb-item active">Profile</li>
+              </ul>
             </div>
+          </div>
+          <div class="col-sm-4 text-right position-relative">
+            <div class="breadcrumb-icon"><img src="/assets/images/breadcrumb/ChatBc.png" alt="breadcrumb" width="165">
+            </div>
+          </div>
         </div>
-    </div>
+      </div>
+      <!-- Top Section -->
     <div>
         <div class="row">
             <!-- Profile Picture Section -->
