--- a/src/app/pages/account/subscription/subscription.component.html
+++ b/src/app/pages/account/subscription/subscription.component.html
@@ -1,110 +1,137 @@
 <div>
-    <mat-card class="mat-mdc-card mdc-card cardWithShadow">
-        <mat-card-content class="mat-mdc-card-content p-y-24">
-            <form [formGroup]="subscriptionForm" (ngSubmit)="onSubmit()" class="m-t-24">
-
-                <!-- <mat-card-title>Change Password</mat-card-title>
-                        <mat-card-subtitle>To change your password, please confirm here</mat-card-subtitle> -->
-                <mat-form-field appearance="outline" color="primary" class="w-100">
-                    <mat-label>Subscription Package</mat-label>
-                    <input matInput formControlName="subscriptionPackage" type="text">
-                </mat-form-field>
-                <div class="row">
-                    <div class="col-md-3">
-                        <mat-form-field appearance="outline" color="primary" class="w-100">
-                            <mat-label>Current Investment</mat-label>
-                            <input matInput formControlName="currentInvestment" type="text">
-                        </mat-form-field>
-                    </div>
-                    <div class="col-md-3">
-                        <mat-form-field appearance="outline" color="primary" class="w-100">
-                            <mat-label>Add Investment</mat-label>
-                            <input matInput formControlName="addInvestment" type="text">
-                        </mat-form-field>
-                    </div>
-                    <div class="col-md-3">
-                        <mat-form-field appearance="outline" color="primary" class="w-100">
-                            <mat-label>Max Orders</mat-label>
-                            <input matInput formControlName="maxOrders" type="text">
-                        </mat-form-field>
-                    </div>
-                    <div class="col-md-3">
-                        <mat-form-field appearance="outline" color="primary" class="w-100">
-                            <mat-label>Per Order Cost</mat-label>
-                            <input matInput formControlName="perOrderCost" type="text">
-                        </mat-form-field>
-                    </div>
-
-                    <mat-checkbox formControlName="stocks">Stocks</mat-checkbox>
-                    <mat-checkbox formControlName="index">Index</mat-checkbox>
-                    <mat-checkbox formControlName="activeManualOrder">Active Manual Order</mat-checkbox>
-                    <mat-checkbox formControlName="startVirtualAlgo">Start Virtual Algo</mat-checkbox>
-                    <mat-checkbox formControlName="startLiveAlgo">Start Live Algo</mat-checkbox>
-
-
-
+    <!-- Top Section -->
+    <div class="bg-light-primary rounded p-y-30 p-x-24 m-b-30 overflow-hidden">
+        <div class="row">
+            <div class="col-sm-8">
+                <h4 class="page-title m-0 f-s-20 f-w-600 m-b-16">My Subscriptions</h4>
+                <div class="d-flex align-items-center overflow-hidden">
+                    <ul class="breadcrumb">
+                        <li class="breadcrumb-item"><a>Dashboard</a></li>
+                        <li class="breadcrumb-item">
+                            <i-tabler name="circle-filled" class="icon-8">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                    <path
+                                        d="M7 3.34a10 10 0 1 1 -4.995 8.984l-.005 -.324l.005 -.324a10 10 0 0 1 4.995 -8.336z"
+                                        stroke-width="0" fill="currentColor"></path>
+                                </svg>
+                            </i-tabler>
+                        </li>
+                        <li class="breadcrumb-item active">Subscription</li>
+                    </ul>
                 </div>
-            </form>
-            <div class="m-t-24">
-                <form [formGroup]="form">
-                    <div formArrayName="accounts">
-                        <div *ngFor="let account of accounts.controls; let i = index" [formGroupName]="i"
-                            class="form-row">
+            </div>
+            <div class="col-sm-4 text-right position-relative">
+                <div class="breadcrumb-icon"><img src="/assets/images/breadcrumb/ChatBc.png" alt="breadcrumb"
+                        width="165">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Top Section -->
 
-                            <!-- Demat Account (Dropdown) -->
-                            <mat-form-field appearance="outline">
-                                <mat-label>Demat Account</mat-label>
+    <div class="row">
+        <!-- Subscription Section -->
+        <div class="col-sm-6">
+            <mat-card class="mat-mdc-card mdc-card cardWithShadow">
+                <mat-card-content class="mat-mdc-card-content p-y-24">
+                    <mat-card-title class="mat-mdc-card-title m-b-24">Subscription Information</mat-card-title>
+                    <form [formGroup]="subscriptionForm" (ngSubmit)="onSubmit()" class="m-t-24">
+                        <div>
+                            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Subscription
+                                Package</mat-label>
+                            <mat-form-field appearance="outline" color="primary" class="w-100">
+                                <input matInput formControlName="subscriptionPackage" type="text">
+                            </mat-form-field>
+                        </div>
+                        <div>
+                            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Current
+                                Investment</mat-label>
+                            <mat-form-field appearance="outline" color="primary" class="w-100">
+                                <input matInput formControlName="currentInvestment" type="text">
+                            </mat-form-field>
+                        </div>
+
+                        <div>
+                            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Add Investment</mat-label>
+                            <mat-form-field appearance="outline" color="primary" class="w-100">
+                                <input matInput formControlName="addInvestment" type="text">
+                            </mat-form-field>
+                        </div>
+
+                        <div>
+                            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Max Orders</mat-label>
+                            <mat-form-field appearance="outline" color="primary" class="w-100">
+                                <input matInput formControlName="maxOrders" type="text">
+                            </mat-form-field>
+                        </div>
+                        <div>
+                            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Per Order Cost</mat-label>
+                            <mat-form-field appearance="outline" color="primary" class="w-100">
+                                <input matInput formControlName="perOrderCost" type="text">
+                            </mat-form-field>
+                        </div>
+                        <mat-checkbox formControlName="stocks">Stocks</mat-checkbox>
+                        <mat-checkbox formControlName="index">Index</mat-checkbox>
+                        <mat-checkbox formControlName="activeManualOrder">Active Manual Order</mat-checkbox>
+                        <mat-checkbox formControlName="startVirtualAlgo">Start Virtual Algo</mat-checkbox>
+                        <mat-checkbox formControlName="startLiveAlgo">Start Live Algo</mat-checkbox>
+                    </form>
+                </mat-card-content>
+            </mat-card>
+        </div>
+
+        <!-- External Accounts -->
+        <div class="col-sm-6">
+            <mat-card class="mat-mdc-card mdc-card cardWithShadow">
+                <mat-card-content class="mat-mdc-card-content p-y-24">
+                    <mat-card-title class="mat-mdc-card-title m-b-24">Additional Demat Accounts</mat-card-title>
+                    <form [formGroup]="subscriptionForm" (ngSubmit)="onSubmit()" class="m-t-24">
+                        <div>
+                            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Demat Account</mat-label>
+                            <mat-form-field appearance="outline" class="w-100">
                                 <mat-select formControlName="dematAccount">
                                     <mat-option *ngFor="let option of dematAccountOptions" [value]="option.value">
                                         {{ option.viewValue }}
                                     </mat-option>
                                 </mat-select>
                             </mat-form-field>
-
-                            <mat-form-field appearance="outline">
-                                <mat-label>Username</mat-label>
-                                <input matInput formControlName="username">
-                            </mat-form-field>
-
-                            <mat-form-field appearance="outline">
-                                <mat-label>Login Pin</mat-label>
-                                <input matInput type="password" formControlName="loginPin">
-                            </mat-form-field>
-
-                            <mat-form-field appearance="outline">
-                                <mat-label>API Key</mat-label>
-                                <input matInput formControlName="apiKey">
-                            </mat-form-field>
-
-                            <mat-form-field appearance="outline">
-                                <mat-label>TOTP</mat-label>
-                                <input matInput formControlName="totp">
-                            </mat-form-field>
-
-                            <div class="button-group">
-                                <button mat-icon-button color="primary" (click)="addAccount()">
-                                    <mat-icon>add</mat-icon>
-                                </button>
-
-                                <button mat-icon-button color="warn" (click)="removeAccount(i)"
-                                    *ngIf="accounts.length > 1">
-                                    <mat-icon>delete</mat-icon>
-                                </button>
-                            </div>
-
                         </div>
-                    </div>
-                </form>
-            </div>
-            <div class="text-right p-24 p-t-0">
-                <button mat-flat-button color="primary" class="m-r-8" type="submit" (click)="onSubmit()">Submit</button>
-                <button mat-stroked-button color="warn" class="m-r-8" type="button">Cancel</button>
-            </div>
-        </mat-card-content>
-    </mat-card>
+                        <div>
+                            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Username</mat-label>
+                            <mat-form-field appearance="outline" color="primary" class="w-100">
+                                <input matInput formControlName="username" type="text">
+                            </mat-form-field>
+                        </div>
 
+                        <div>
+                            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Login Pin</mat-label>
+                            <mat-form-field appearance="outline" color="primary" class="w-100">
+                                <input matInput formControlName="loginPin" type="text">
+                            </mat-form-field>
+                        </div>
 
+                        <div>
+                            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Api Key</mat-label>
+                            <mat-form-field appearance="outline" color="primary" class="w-100">
+                                <input matInput formControlName="maxOrders" type="text">
+                            </mat-form-field>
+                        </div>
+                        <div>
+                            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">TOTP</mat-label>
+                            <mat-form-field appearance="outline" color="primary" class="w-100">
+                                <input matInput formControlName="totp" type="text">
+                            </mat-form-field>
+                        </div>
+                    </form>
 
-
-
+                </mat-card-content>
+                <div class="text-right p-24 p-t-0">
+                    <button mat-flat-button color="primary" class="m-r-8" type="submit"
+                        (click)="onSubmit()">Submit</button>
+                    <button mat-stroked-button color="warn" class="m-r-8" type="button">Cancel</button>
+                </div>
+            </mat-card>
+        </div>
+    </div>
 </div>
