--- a/src/app/pages/trading/trade-book/trade-book.component.html
+++ b/src/app/pages/trading/trade-book/trade-book.component.html
@@ -3,73 +3,73 @@
   
     <!-- Symbol Column -->
     <ng-container matColumnDef="symbol">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> Symbol </th>
+      <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Symbol </th>
       <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
     </ng-container>
   
     <!-- Type Column -->
     <ng-container matColumnDef="type">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> Type </th>
+      <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Type </th>
       <td mat-cell *matCellDef="let element"> {{element.type}} </td>
     </ng-container>
   
     <!-- Quantity/Filled Column -->
     <ng-container matColumnDef="qtyFilled">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> Qty/Filled </th>
+      <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Qty/Filled </th>
       <td mat-cell *matCellDef="let element"> {{element.qtyFilled}} </td>
     </ng-container>
   
     <!-- Average Price Column -->
     <ng-container matColumnDef="avgPrice">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> Avg Price </th>
+      <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Avg Price </th>
       <td mat-cell *matCellDef="let element"> {{element.avgPrice}} </td>
     </ng-container>
   
     <!-- LTP Column -->
     <ng-container matColumnDef="ltp">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> LTP </th>
+      <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> LTP </th>
       <td mat-cell *matCellDef="let element"> {{element.ltp}} </td>
     </ng-container>
   
     <!-- Status Column -->
     <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> Status </th>
+      <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Status </th>
       <td mat-cell *matCellDef="let element"> {{element.status}} </td>
     </ng-container>
   
     <!-- Traded At Column -->
     <ng-container matColumnDef="tradedAt">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> Traded At </th>
+      <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Traded At </th>
       <td mat-cell *matCellDef="let element"> {{element.tradedAt}} </td>
     </ng-container>
   
     <!-- Product Column -->
     <ng-container matColumnDef="product">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> Product </th>
+      <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Product </th>
       <td mat-cell *matCellDef="let element"> {{element.product}} </td>
     </ng-container>
   
     <!-- Order Type Column -->
     <ng-container matColumnDef="orderType">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> Order Type </th>
+      <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Order Type </th>
       <td mat-cell *matCellDef="let element"> {{element.orderType}} </td>
     </ng-container>
   
     <!-- Order No Column -->
     <ng-container matColumnDef="orderNo">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> Order No </th>
+      <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Order No </th>
       <td mat-cell *matCellDef="let element"> {{element.orderNo}} </td>
     </ng-container>
   
     <!-- Exchange Order No Column -->
     <ng-container matColumnDef="exchangeOrderNo">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> Exchange Order No </th>
+      <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Exchange Order No </th>
       <td mat-cell *matCellDef="let element"> {{element.exchangeOrderNo}} </td>
     </ng-container>
   
     <!-- Action Column -->
     <ng-container matColumnDef="action">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> Action </th>
+      <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Action </th>
       <td mat-cell *matCellDef="let element"> {{element.action.join(', ')}} </td>
     </ng-container>
   
