service-imlementation-for-trade-removed-dynamic-form

--- a/src/app/pages/trading/holding/holding.component.html
+++ b/src/app/pages/trading/holding/holding.component.html
@@ -5,124 +5,124 @@
         <!-- Symbol Column -->
         <ng-container matColumnDef="symbol">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> Symbol </th>
-            <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.symbol}} </td>
         </ng-container>
 
         <!-- Type Column -->
         <ng-container matColumnDef="type">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> Type </th>
-            <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.type}} </td>
         </ng-container>
 
         <!-- Quantity Column -->
         <ng-container matColumnDef="quantity">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> Quantity </th>
-            <td mat-cell *matCellDef="let element"> {{element.quantity}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.quantity}} </td>
         </ng-container>
 
         <!-- T1 Quantity Column -->
         <ng-container matColumnDef="t1Quantity">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> T1 Quantity
             </th>
-            <td mat-cell *matCellDef="let element"> {{element.t1Quantity}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.t1Quantity}} </td>
         </ng-container>
 
         <!-- Used Qty Column -->
         <ng-container matColumnDef="usedQty">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> Used Qty </th>
-            <td mat-cell *matCellDef="let element"> {{element.usedQty}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.usedQty}} </td>
         </ng-container>
 
         <!-- Buy Avg Price Column -->
         <ng-container matColumnDef="buyAvgPrice">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> Buy Avg Price
             </th>
-            <td mat-cell *matCellDef="let element"> {{element.buyAvgPrice}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.buyAvgPrice}} </td>
         </ng-container>
 
         <!-- Sell Avg Price Column -->
         <ng-container matColumnDef="sellAvgPrice">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> Sell Avg Price
             </th>
-            <td mat-cell *matCellDef="let element"> {{element.sellAvgPrice}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.sellAvgPrice}} </td>
         </ng-container>
 
         <!-- LTP Column -->
         <ng-container matColumnDef="ltp">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> LTP </th>
-            <td mat-cell *matCellDef="let element"> {{element.ltp}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.ltp}} </td>
         </ng-container>
 
         <!-- Days P&L Column -->
         <ng-container matColumnDef="daysPnL">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> Days P&L </th>
-            <td mat-cell *matCellDef="let element"> {{element.daysPnL}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.daysPnL}} </td>
         </ng-container>
 
         <!-- Net P&L Column -->
         <ng-container matColumnDef="netPnL">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> Net P&L </th>
-            <td mat-cell *matCellDef="let element"> {{element.netPnL}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.netPnL}} </td>
         </ng-container>
 
         <!-- Total Holding Q Column -->
         <ng-container matColumnDef="totalHoldingQ">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> Total Holding
                 Qty </th>
-            <td mat-cell *matCellDef="let element"> {{element.totalHoldingQ}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.totalHoldingQ}} </td>
         </ng-container>
 
         <!-- Invested Value Column -->
         <ng-container matColumnDef="investedValue">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> Invested Value
             </th>
-            <td mat-cell *matCellDef="let element"> {{element.investedValue}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.investedValue}} </td>
         </ng-container>
 
         <!-- Market Value Column -->
         <ng-container matColumnDef="marketValue">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> Market Value
             </th>
-            <td mat-cell *matCellDef="let element"> {{element.marketValue}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.marketValue}} </td>
         </ng-container>
 
         <!-- Haircut Column -->
         <ng-container matColumnDef="haircut">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> Haircut </th>
-            <td mat-cell *matCellDef="let element"> {{element.haircut}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.haircut}} </td>
         </ng-container>
 
         <!-- Collateral Quantity Column -->
         <ng-container matColumnDef="collateralQuantity">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> Collateral Qty
             </th>
-            <td mat-cell *matCellDef="let element"> {{element.collateralQuantity}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.collateralQuantity}} </td>
         </ng-container>
 
         <!-- Pledge Quantity Column -->
         <ng-container matColumnDef="pledgeQuantity">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> Pledge Qty
             </th>
-            <td mat-cell *matCellDef="let element"> {{element.pledgeQuantity}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.pledgeQuantity}} </td>
         </ng-container>
 
         <!-- Collateral Value Column -->
         <ng-container matColumnDef="collateralValue">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> Collateral
                 Value </th>
-            <td mat-cell *matCellDef="let element"> {{element.collateralValue}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.collateralValue}} </td>
         </ng-container>
 
         <!-- Action Column -->
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> Action </th>
-            <td mat-cell *matCellDef="let element"> {{element.action}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.action}} </td>
         </ng-container>
 
         <!-- Exit Column -->
         <ng-container matColumnDef="exit">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="f-w-600 f-s-14 mat-subtitle-1"> Exit </th>
-            <td mat-cell *matCellDef="let element"> {{element.exit}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.exit}} </td>
         </ng-container>
 
         <!-- Header and Row Definitions -->
@@ -134,7 +134,7 @@
 
 <!-- Pagination Below the Table -->
 <div class="pagination-wrapper">
-    <mat-paginator [length]="totalData" [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 20]"
+    <mat-paginator [length]="totalCount" [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 20]"
         (page)="onPageChange($event)">
     </mat-paginator>
 </div>
