--- a/src/app/pages/trading/order-book/order-book.component.html
+++ b/src/app/pages/trading/order-book/order-book.component.html
@@ -1,94 +1,95 @@
-<div class="table-wrapper">
+
+<div class="table-wrapper table-responsive m-t-30">
     <table mat-table [dataSource]="dataSource" matSort class="w-100">
 
         <!-- Symbol Column -->
         <ng-container matColumnDef="symbol">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Symbol </th>
-            <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.symbol}} </td>
         </ng-container>
 
         <!-- Type Column -->
         <ng-container matColumnDef="type">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Type </th>
-            <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.type}} </td>
         </ng-container>
 
         <!-- Quantity/Filled Column -->
         <ng-container matColumnDef="qtyFilled">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Qty/Filled </th>
-            <td mat-cell *matCellDef="let element"> {{element.qtyFilled}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.qtyFilled}} </td>
         </ng-container>
 
         <!-- Order Price Column -->
         <ng-container matColumnDef="orderPrice">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Order Price </th>
-            <td mat-cell *matCellDef="let element"> {{element.orderPrice}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.orderPrice}} </td>
         </ng-container>
 
         <!-- Executed At Column -->
         <ng-container matColumnDef="executedAt">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Executed At </th>
-            <td mat-cell *matCellDef="let element"> {{element.executedAt}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.executedAt}} </td>
         </ng-container>
 
         <!-- Average Price Column -->
         <ng-container matColumnDef="avgPrice">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Avg Price </th>
-            <td mat-cell *matCellDef="let element"> {{element.avgPrice}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.avgPrice}} </td>
         </ng-container>
 
         <!-- LTP Column -->
         <ng-container matColumnDef="ltp">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> LTP </th>
-            <td mat-cell *matCellDef="let element"> {{element.ltp}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.ltp}} </td>
         </ng-container>
 
         <!-- Status Column -->
         <ng-container matColumnDef="status">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Status </th>
-            <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.status}} </td>
         </ng-container>
 
         <!-- Date Column -->
         <ng-container matColumnDef="date">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Date </th>
-            <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.date}} </td>
         </ng-container>
 
         <!-- Validity Column -->
         <ng-container matColumnDef="validity">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Validity </th>
-            <td mat-cell *matCellDef="let element"> {{element.validity}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.validity}} </td>
         </ng-container>
 
         <!-- Product Column -->
         <ng-container matColumnDef="product">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Product </th>
-            <td mat-cell *matCellDef="let element"> {{element.product}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.product}} </td>
         </ng-container>
 
         <!-- Order Type Column -->
         <ng-container matColumnDef="orderType">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Order Type </th>
-            <td mat-cell *matCellDef="let element"> {{element.orderType}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.orderType}} </td>
         </ng-container>
 
         <!-- XTS Order ID Column -->
         <ng-container matColumnDef="xtsOrderId">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> XTS Order ID </th>
-            <td mat-cell *matCellDef="let element"> {{element.xtsOrderId}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.xtsOrderId}} </td>
         </ng-container>
 
         <!-- Exchange Order No Column -->
         <ng-container matColumnDef="exchangeOrderNo">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Exchange Order No </th>
-            <td mat-cell *matCellDef="let element"> {{element.exchangeOrderNo}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.exchangeOrderNo}} </td>
         </ng-container>
 
         <!-- Action Column -->
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Action </th>
-            <td mat-cell *matCellDef="let element"> {{element.action}} </td>
+            <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.action}} </td>
         </ng-container>
 
         <!-- Header and Row Definitions -->
@@ -100,5 +101,8 @@
 
 <!-- Pagination Below the Table -->
 <div class="pagination-wrapper">
-    <mat-paginator [length]="dataSource.data.length" [pageSize]="10" [pageSizeOptions]="[5, 10, 20]"></mat-paginator>
+    <mat-paginator [length]="totalCount" [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 20]"
+        (page)="onPageChange($event)">
+    </mat-paginator>
 </div>
+
