--- a/src/app/pages/trading/trade-book/trade-book.component.html
+++ b/src/app/pages/trading/trade-book/trade-book.component.html
@@ -1,86 +1,88 @@
 <div class="table-wrapper">
-<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-  
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+
     <!-- Symbol Column -->
     <ng-container matColumnDef="symbol">
       <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Symbol </th>
-      <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+      <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.symbol}} </td>
     </ng-container>
-  
+
     <!-- Type Column -->
     <ng-container matColumnDef="type">
       <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Type </th>
-      <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+      <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.type}} </td>
     </ng-container>
-  
+
     <!-- Quantity/Filled Column -->
     <ng-container matColumnDef="qtyFilled">
       <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Qty/Filled </th>
-      <td mat-cell *matCellDef="let element"> {{element.qtyFilled}} </td>
+      <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.qtyFilled}} </td>
     </ng-container>
-  
+
     <!-- Average Price Column -->
     <ng-container matColumnDef="avgPrice">
       <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Avg Price </th>
-      <td mat-cell *matCellDef="let element"> {{element.avgPrice}} </td>
+      <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.avgPrice}} </td>
     </ng-container>
-  
+
     <!-- LTP Column -->
     <ng-container matColumnDef="ltp">
       <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> LTP </th>
-      <td mat-cell *matCellDef="let element"> {{element.ltp}} </td>
+      <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.ltp}} </td>
     </ng-container>
-  
+
     <!-- Status Column -->
     <ng-container matColumnDef="status">
       <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Status </th>
-      <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+      <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.status}} </td>
     </ng-container>
-  
+
     <!-- Traded At Column -->
     <ng-container matColumnDef="tradedAt">
       <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Traded At </th>
-      <td mat-cell *matCellDef="let element"> {{element.tradedAt}} </td>
+      <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.tradedAt}} </td>
     </ng-container>
-  
+
     <!-- Product Column -->
     <ng-container matColumnDef="product">
       <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Product </th>
-      <td mat-cell *matCellDef="let element"> {{element.product}} </td>
+      <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.product}} </td>
     </ng-container>
-  
+
     <!-- Order Type Column -->
     <ng-container matColumnDef="orderType">
       <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Order Type </th>
-      <td mat-cell *matCellDef="let element"> {{element.orderType}} </td>
+      <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.orderType}} </td>
     </ng-container>
-  
+
     <!-- Order No Column -->
     <ng-container matColumnDef="orderNo">
       <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Order No </th>
-      <td mat-cell *matCellDef="let element"> {{element.orderNo}} </td>
+      <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.orderNo}} </td>
     </ng-container>
-  
+
     <!-- Exchange Order No Column -->
     <ng-container matColumnDef="exchangeOrderNo">
       <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Exchange Order No </th>
-      <td mat-cell *matCellDef="let element"> {{element.exchangeOrderNo}} </td>
+      <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.exchangeOrderNo}} </td>
     </ng-container>
-  
+
     <!-- Action Column -->
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef class="f-w-600 f-s-14 mat-subtitle-1"> Action </th>
-      <td mat-cell *matCellDef="let element"> {{element.action.join(', ')}} </td>
+      <td mat-cell *matCellDef="let element" class="mat-body-1"> {{element.action}} </td>
     </ng-container>
-  
+
     <!-- Header and Row Definitions -->
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  
+
   </table>
 </div>
 
 <!-- Pagination Below the Table -->
 <div class="pagination-wrapper">
-    <mat-paginator [length]="dataSource.data.length" [pageSize]="10" [pageSizeOptions]="[5, 10, 20]"></mat-paginator>
+  <mat-paginator [length]="totalCount" [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 20]"
+    (page)="onPageChange($event)">
+  </mat-paginator>
 </div>
