--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14318,235 +14318,235 @@ html .topbar {
     color: currentColor!important
 }
 
-[dir=ltr] .m-r-0 {
+.m-r-0 {
     margin-right: 0!important
 }
 
-[dir=ltr] .m-r-2 {
+.m-r-2 {
     margin-right: 2px!important
 }
 
-[dir=ltr] .m-r-4 {
+.m-r-4 {
     margin-right: 4px!important
 }
 
-[dir=ltr] .m-r-6 {
+.m-r-6 {
     margin-right: 7px!important
 }
 
-[dir=ltr] .m-r-8 {
+.m-r-8 {
     margin-right: 8px!important
 }
 
-[dir=ltr] .m-r-10 {
+.m-r-10 {
     margin-right: 10px!important
 }
 
-[dir=ltr] .m-r-12 {
+.m-r-12 {
     margin-right: 12px!important
 }
 
-[dir=ltr] .m-r-15 {
+.m-r-15 {
     margin-right: 15px!important
 }
 
-[dir=ltr] .m-r-16 {
+.m-r-16 {
     margin-right: 16px!important
 }
 
-[dir=ltr] .m-r-20 {
+.m-r-20 {
     margin-right: 20px!important
 }
 
-[dir=ltr] .m-r-24 {
+.m-r-24 {
     margin-right: 24px!important
 }
 
-[dir=ltr] .m-r-30 {
+.m-r-30 {
     margin-right: 30px!important
 }
 
-[dir=ltr] .m-r-32 {
+.m-r-32 {
     margin-right: 32px!important
 }
 
-[dir=ltr] .m-r-48 {
+.m-r-48 {
     margin-right: 48px!important
 }
 
-[dir=ltr] .m-r-auto {
+.m-r-auto {
     margin-right: auto!important
 }
 
-[dir=ltr] .m-l-0 {
+.m-l-0 {
     margin-left: 0!important
 }
 
-[dir=ltr] .m-l-2 {
+.m-l-2 {
     margin-left: 2px!important
 }
 
-[dir=ltr] .m-l-4 {
+.m-l-4 {
     margin-left: 4px!important
 }
 
-[dir=ltr] .m-l-6 {
+.m-l-6 {
     margin-left: 7px!important
 }
 
-[dir=ltr] .m-l-8 {
+.m-l-8 {
     margin-left: 8px!important
 }
 
-[dir=ltr] .m-l-10 {
+.m-l-10 {
     margin-left: 10px!important
 }
 
-[dir=ltr] .m-l-12 {
+.m-l-12 {
     margin-left: 12px!important
 }
 
-[dir=ltr] .m-l-15 {
+.m-l-15 {
     margin-left: 15px!important
 }
 
-[dir=ltr] .m-l-16 {
+.m-l-16 {
     margin-left: 16px!important
 }
 
-[dir=ltr] .m-l-20 {
+.m-l-20 {
     margin-left: 20px!important
 }
 
-[dir=ltr] .m-l-24 {
+.m-l-24 {
     margin-left: 24px!important
 }
 
-[dir=ltr] .m-l-30 {
+.m-l-30 {
     margin-left: 30px!important
 }
 
-[dir=ltr] .m-l-32 {
+.m-l-32 {
     margin-left: 32px!important
 }
 
-[dir=ltr] .m-l-48 {
+.m-l-48 {
     margin-left: 48px!important
 }
 
-[dir=ltr] .m-l-auto {
+.m-l-auto {
     margin-left: auto!important
 }
 
-[dir=ltr] .p-l-0 {
+.p-l-0 {
     padding-left: 0!important
 }
 
-[dir=ltr] .p-l-2 {
+.p-l-2 {
     padding-left: 2px!important
 }
 
-[dir=ltr] .p-l-4 {
+.p-l-4 {
     padding-left: 4px!important
 }
 
-[dir=ltr] .p-l-6 {
+.p-l-6 {
     padding-left: 7px!important
 }
 
-[dir=ltr] .p-l-8 {
+.p-l-8 {
     padding-left: 8px!important
 }
 
-[dir=ltr] .p-l-10 {
+.p-l-10 {
     padding-left: 10px!important
 }
 
-[dir=ltr] .p-l-12 {
+.p-l-12 {
     padding-left: 12px!important
 }
 
-[dir=ltr] .p-l-15 {
+.p-l-15 {
     padding-left: 15px!important
 }
 
-[dir=ltr] .p-l-16 {
+.p-l-16 {
     padding-left: 16px!important
 }
 
-[dir=ltr] .p-l-20 {
+.p-l-20 {
     padding-left: 20px!important
 }
 
-[dir=ltr] .p-l-24 {
+.p-l-24 {
     padding-left: 24px!important
 }
 
-[dir=ltr] .p-l-30 {
+.p-l-30 {
     padding-left: 30px!important
 }
 
-[dir=ltr] .p-l-32 {
+.p-l-32 {
     padding-left: 32px!important
 }
 
-[dir=ltr] .p-l-48 {
+.p-l-48 {
     padding-left: 48px!important
 }
 
-[dir=ltr] .p-r-0 {
+.p-r-0 {
     padding-right: 0!important
 }
 
-[dir=ltr] .p-r-2 {
+.p-r-2 {
     padding-right: 2px!important
 }
 
-[dir=ltr] .p-r-4 {
+.p-r-4 {
     padding-right: 4px!important
 }
 
-[dir=ltr] .p-r-6 {
+.p-r-6 {
     padding-right: 7px!important
 }
 
-[dir=ltr] .p-r-8 {
+.p-r-8 {
     padding-right: 8px!important
 }
 
-[dir=ltr] .p-r-10 {
+.p-r-10 {
     padding-right: 10px!important
 }
 
-[dir=ltr] .p-r-12 {
+.p-r-12 {
     padding-right: 12px!important
 }
 
-[dir=ltr] .p-r-15 {
+.p-r-15 {
     padding-right: 15px!important
 }
 
-[dir=ltr] .p-r-16 {
+.p-r-16 {
     padding-right: 16px!important
 }
 
-[dir=ltr] .p-r-20 {
+.p-r-20 {
     padding-right: 20px!important
 }
 
-[dir=ltr] .p-r-24 {
+.p-r-24 {
     padding-right: 24px!important
 }
 
-[dir=ltr] .p-r-30 {
+.p-r-30 {
     padding-right: 30px!important
 }
 
-[dir=ltr] .p-r-32 {
+.p-r-32 {
     padding-right: 32px!important
 }
 
-[dir=ltr] .p-r-48 {
+.p-r-48 {
     padding-right: 48px!important
 }
 
@@ -16185,3 +16185,47 @@ html .topbar {
 }
     
 
+
+.f-s-0 {
+    font-size: 0!important
+}
+
+.f-s-10 {
+    font-size: 10px!important
+}
+
+.f-s-12 {
+    font-size: 12px!important
+}
+
+.f-s-14 {
+    font-size: 14px!important
+}
+
+.f-s-15 {
+    font-size: 15px!important
+}
+
+.f-s-16 {
+    font-size: 16px!important
+}
+
+.f-s-18 {
+    font-size: 18px!important
+}
+
+.f-s-20 {
+    font-size: 20px!important
+}
+
+.f-s-21 {
+    font-size: 21px!important
+}
+
+.f-s-24 {
+    font-size: 24px!important
+}
+
+.f-s-30 {
+    font-size: 30px!important
+}
