--- a/src/app/pages/dashboard/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard/dashboard.component.scss
@@ -1,4 +1,66 @@
-.mat-mdc-card-custom{
+.mat-mdc-card-custom {
     height: 208px;
 }
-.welcome{height: 180px;}
+
+.welcome {
+    height: 205px;
+}
+
+.transaction-item {
+    display: flex;
+    align-items: center;
+    // background: #f8f9ff; /* Light blue background */
+    border-radius: 12px;
+    // padding: 12px;
+    max-width: 350px;
+    /* Adjust as needed */
+}
+
+.transaction-content {
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
+.icon-container {
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #eef4ff;
+    /* Soft blue background */
+    border-radius: 5px;
+}
+
+.icon-container img {
+    width: 24px;
+    height: 24px;
+}
+
+.transaction-details {
+    margin-left: 12px;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    /* Adjusts spacing between title and subtitle */
+}
+
+
+.transaction-title {
+    font-size: 16px;
+    font-weight: 600;
+    margin: 0;
+}
+
+.transaction-subtitle {
+    font-size: 14px;
+    color: #888;
+}
+
+.transaction-amount {
+    font-size: 16px;
+    font-weight: 600;
+    color: #222;
+}
