dashboard-code-optimizations

--- a/src/app/pages/dashboard/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard/dashboard.component.html
@@ -231,7 +231,7 @@
       <mat-card class="mat-mdc-card mdc-card cardWithShadow">
          <mat-card-content class="mat-mdc-card-content p-y-30">
             <mat-card-title class="mat-mdc-card-title">Best Performers</mat-card-title>
-            <mat-card-subtitle class="mat-mdc-card-subtitle">Average Return</mat-card-subtitle>
+            <mat-card-subtitle class="mat-mdc-card-subtitle"> </mat-card-subtitle>
             <div class="">
                <div class="d-flex justify-content-between align-items-center">
                   <!-- Icon for Top Gainers -->
